--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta charset="utf-8" />
     <script src="https://xotic.org/content/scripts/font-awesome-6-pro.js"></script>
     <meta name="keywords" content="blooket, blacket, private server, blacket private server, blooket private server">
+    <meta content="Blacket Setup" property="og:title">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
+    <meta content="Website written in React + Vite to generate a config file to setup your Blacket server instance."
+        property="og:description">
+    <meta content="/content/logo.png" property="og:image" />
 </head>
 
 <body>
