defer script in head

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <script src="https://xotic.org/content/scripts/font-awesome-6-pro.js"></script>
+    <script defer type="module" src="/src/main.jsx"></script>
     <meta name="keywords" content="blooket, blacket, private server, blacket private server, blooket private server">
     <meta content="Blacket Setup" property="og:title">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
@@ -14,7 +15,6 @@
 
 <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.jsx"></script>
 </body>
 
 </html>
