moving pages to the folder and made handlers to handle the pages instead

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en" translate="no">
 
 <head>
-    <meta charset="utf-8" />
+    <title>Blacket Setup</title>
     <script src="https://xotic.org/content/scripts/font-awesome-6-pro.js"></script>
     <script defer type="module" src="/src/main.jsx"></script>
+    <meta charset="utf-8" />
     <meta name="keywords" content="blooket, blacket, private server, blacket private server, blooket private server">
     <meta content="Blacket Setup" property="og:title">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0">
